# collie-defense

./: .gitignore  LICENSE-music.md  Makefile  README.md  pyproject.toml
graphics_raw/: bg_qrcode.aseprite  bullet.aseprite  bullet_fire.aseprite  bullet_magic.aseprite  config_menu_background.aseprite  cursor.aseprite  dancing_collie.aseprite  dancing_sheep_0.aseprite  dancing_sheep_1.aseprite  dancing_sheep_3.aseprite  gameover.aseprite  gamewin.aseprite  launch_background.aseprite  level_select.aseprite  level_win_bg.aseprite  life_bar.aseprite  overlay_bg.aseprite  pause.aseprite  play_menu_background.aseprite  player_life.aseprite  qrcode_font.aseprite  range.aseprite  sheep.aseprite  store.aseprite  store_select.aseprite  title_menu_select.aseprite  tower_aoe.aseprite  tower_ballista.aseprite  tower_basic.aseprite  tower_fire.aseprite  tower_magic.aseprite  tower_select_ui.aseprite  tower_select_ui_highlight.aseprite  tower_sticky.aseprite  tower_yellow.aseprite  victory_banner_left.aseprite  victory_banner_right.aseprite
include/: bullet.h  const.h  cursor.h  debug.h  enemy.h  enemy_bear.h  enemy_fox.h  enemy_tiger.h  entity.h  game.h  hud.h  level.h  math.h  menu.h  menu_confirm.h  path.h  player.h  save.h  sheep.h  shop.h  target.h  text.h  tower.h  tower_ballista.h  tower_basic.h  tower_catapult.h  tower_fire.h  tower_magic.h  ui.h  utils.h  wave.h
ldtk/: dirt.aseprite  field.aseprite  frame.aseprite  hell.aseprite  levels.ldtk  snow.aseprite
src/: bullet.cpp  cursor.cpp  debug.cpp  enemy.cpp  enemy_bear.cpp  enemy_fox.cpp  enemy_tiger.cpp  entity.cpp  ui.cpp  (+20 more)
(+57 files in other folders)
