[tool.poetry]
name = "collie-defense-tools"
version = "0.1.0"
description = ""
authors = ["Yann Vaillant <yann@vaillant.im>"]

[tool.poetry.dependencies]
python = ">= 3.7"
Pillow = "*"
numpy = "*"
ldtkpy = "*"
black = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
